[gd_scene load_steps=5 format=3 uid="uid://c550b581bm3da"]

[ext_resource type="Script" path="res://Features/UI/UI.gd" id="1_rrwcs"]
[ext_resource type="Texture2D" uid="uid://degd8vwa6isnu" path="res://Images/UI/add.png" id="2_jcs44"]
[ext_resource type="PackedScene" uid="uid://b3s0n0wtc4iqa" path="res://Features/UI/items_panel.tscn" id="2_tijtr"]
[ext_resource type="PackedScene" uid="uid://b0lt3v62knfo6" path="res://Features/UI/wall_floor.tscn" id="2_wjr7d"]

[node name="UI" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_rrwcs")

[node name="WallFloor" parent="." instance=ExtResource("2_wjr7d")]

[node name="Overlay" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DecoratingMenuButton" type="TextureButton" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -197.0
offset_top = -186.0
offset_right = -52.0
offset_bottom = -44.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("2_jcs44")

[node name="ItemsPanel" parent="." instance=ExtResource("2_tijtr")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="DecoratingMenuButton" to="." method="_on_decorating_menu_button_pressed"]
[connection signal="closeItemsPanel" from="ItemsPanel" to="." method="_on_items_panel_close"]
[connection signal="itemSelected" from="ItemsPanel" to="." method="_on_items_panel_item_selected"]
